# valle

./: .gitignore  CONTEXT.md  Makefile  README.md  pyproject.toml  requirements.txt
docs/: architecture.md
docs/adr/: 0001-reflex-uses-depth-not-object-detection.md
tests/: test_agent_config.py  test_agent_perception.py  test_agent_runner.py  test_agent_sessions.py  test_autopilot.py  test_brain_api.py  test_brain_missions.py  test_brain_policy.py  test_brain_portal.py  test_bridge.py  test_controller.py  test_observability.py  test_sim.py
valle/: __init__.py  app.py  bridge.py  config.py  controller.py  motors.py  observability.py  reflex.py
valle/brain/: __init__.py  api.py  api_config.py  client.py  config.py  depth.py  evidence.py  frames.py  loop.py  notify.py  policy.py  portal.py  runs.py  scheduler.py
valle/brain/agent/: __init__.py  client.py  config.py  perception.py  runner.py  tools.py
valle/brain/find/: config.py  detector.py  seek.py  server.py
valle/camera/: __init__.py  __main__.py
valle/find/: __init__.py  config.py  detector.py  seek.py  server.py
valle/sim/: __init__.py  driver.py  render.py  server.py  ui.py  world.py
